--- a/packages/components/calendar/src/select-month.scss
+++ b/packages/components/calendar/src/select-month.scss
@@ -19,7 +19,7 @@ header {
   align-items: center;
   display: flex;
   gap: var(--sl-size-100);
-  padding-inline: var(--sl-size-150) var(--sl-size-050);
+  padding-inline: var(--sl-size-050) var(--sl-size-none);
 
   .current-year {
     font-weight: var(--sl-text-new-typeset-fontWeight-semiBold);
@@ -43,7 +43,7 @@ table {
   box-sizing: content-box;
   inline-size: 100%;
   margin: 0;
-  padding: var(--sl-size-100);
+  padding: 0 0 var(--sl-size-100) 0;
 }
 
 td {
@@ -96,7 +96,7 @@ button {
     outline: transparent solid var(--sl-size-outlineWidth-default);
     outline-offset: var(--sl-size-outlineOffset-default);
     padding: calc(var(--sl-size-025) - var(--sl-size-borderWidth-subtle))
-      calc(var(--sl-size-100) - var(--sl-size-borderWidth-action));
+      calc(var(--sl-size-025) - var(--sl-size-borderWidth-action));
 
     @media (prefers-reduced-motion: no-preference) {
       transition: 0.2s ease-in-out;
